# sql-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.postgres.yml  pyproject.toml  schema.postgres.sql  seed.postgres.sql  sqlagent.md
audit/: backend_server.py  capture_api_chat.mjs  frontend_safe_contract.md  generate_samples.py  report.md
configs/: bird.yml  bird_E2a.yml  bird_E2b.yml  bird_E5b.yml  llmsql.yml  llmsql_E2a.yml  llmsql_E2b.yml  llmsql_E2c.yml  llmsql_E4a.yml  llmsql_E4b.yml  llmsql_E4c.yml  llmsql_E4d.yml  llmsql_E5_topk10.yml  llmsql_E5_topk20.yml  llmsql_E5b.yml  security_E6b.yml  spider.yml  write_E3a.yml  write_E3b.yml  write_E3c.yml  write_E3d.yml
configs/eval/: sqlite_spider.yaml
configs/queries/: sqlite_smoke.yaml
datasets/: sample.yaml
datasets/spider/: spider_sub.jsonl
docs/: TEST_PLAN.md  TEST_PLAN_V2.0.md  api_contract.md  changes_2025-02-21.md  design_architecture.md  guard_rules.md  run_guide.md  test_guide.md  trace_schema.md
docs/codex/: 2025-01-30-sql-agent-design.md
frontend/: adapter_contract.md  evidence_ui_notes.md  package.json  playwright.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/scripts/: generate-adapter-samples.ts  start-smoke-backend.sh
frontend/tests/: basic.spec.ts  contract-consumption.spec.ts  full-chain.smoke.spec.ts  next-server-loader.mjs  normalize-contract.test.ts  query-result.test.ts  route-contract.real.test.ts  route-contract.test.ts
reports/: manifest_20260225.md  summary_20260225.md  tables_for_thesis_20260225.csv
results/: bird100__bird100.jsonl  spider_sub__smoke.jsonl  spider_sub__spider100.jsonl  spider_sub__spider30.jsonl  train__llmsql100.jsonl  train_spider__spider100.jsonl
sandbox/: .gitkeep
scripts/: compute_security_metrics.py  plot_thesis_figures.py  query_sqlite_json.py  run_benchmark.py  summarize.py
src/sql_agent_demo/: __init__.py  cli.py
tests/: conftest.py  test_cli_exit_codes.py  test_db_exec.py  test_db_init.py  test_intent.py  test_postgres_backend.py  test_read_pipeline.py  test_safety.py  test_selfcheck.py  test_serialization.py  test_summarizer.py
tests/api/: test_run_contract.py  test_tasks_contract.py
tests/data/: schema.postgres.sql  schema.sql  seed.postgres.sql  seed.sql
tests/db/: test_handle_contract.py
tests/unit/: test_config.py  (+6 more)
(+66 files in other folders)
