[project]
name = "langchain-sql-agent-demo"
version = "0.1.0"
description = "Read-only SQL agent demo using LangChain and SQLite"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    "langchain-core>=0.2.43",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
openai = [
    "langchain-openai>=0.2.6",
]

[project.scripts]
sql-agent-demo = "sql_agent_demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_agent_demo"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.4",
]
